--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "ant-design-vue": "4.x",
+    "axios": "^1.6.7",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "nprogress": "^0.2.0",
+    "path": "^0.12.7",
     "pinia": "^2.1.7",
     "postcss": "^8.4.35",
     "postcss-pxtorem": "5.1.1",
@@ -17,7 +23,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "sass": "^1.71.1",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.0",
     "vue-tsc": "^1.8.27"
   }
