--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "ant-design-vue": "4.x",
     "axios": "^1.6.7",
+    "element-plus": "^2.5.6",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "nprogress": "^0.2.0",
