--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
-    "ant-design-vue": "4.x",
     "axios": "^1.6.7",
     "element-plus": "^2.5.6",
     "less": "^4.2.0",
@@ -19,6 +18,7 @@
     "pinia": "^2.1.7",
     "postcss": "^8.4.35",
     "postcss-pxtorem": "5.1.1",
+    "vant": "^4.8.4",
     "vue": "^3.4.15",
     "vue-router": "4"
   },
